--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "caniuse-lite": "^1.0.30001570",
     "country-state-city": "^3.1.2",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
